Implemented the first/last template functions; using jool in Java.